--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:gridlayout-v7:25.3.1'
     compile 'com.squareup:android-times-square:1.6.5@aar'
+    compile 'com.iarcuschin:simpleratingbar:0.1.5'
     testCompile 'junit:junit:4.12'
 }
