--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:25.3.1'
     compile 'com.squareup:android-times-square:1.6.5@aar'
     compile 'com.iarcuschin:simpleratingbar:0.1.5'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.1'
+    compile 'com.jakewharton:butterknife:8.8.0'
     testCompile 'junit:junit:4.12'
 }
