--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon_bo_250x250"
+        android:icon="@drawable/icon_300x300"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
