UI : Jemput Aset

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -166,6 +166,9 @@
         <activity
             android:name=".DropAsetActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".TakeAsetActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
