bicycle add, list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,12 +174,16 @@
         <activity
             android:name=".TakeAsetActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <!--<activity android:name=".Sample" />-->
-        <activity android:name=".CriticSuggestionActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".HistoryWithdrawalActivity"
+        <!-- <activity android:name=".Sample" /> -->
+        <activity
+            android:name=".CriticSuggestionActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".HistoryWithdrawalActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         />
+        <activity android:name=".FormBicycleAsetActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
