--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,12 @@ dependencies {
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.google.firebase:firebase-messaging:9.2.0'
     testCompile 'junit:junit:4.12'
 }
 
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
 
 
 
