--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.2.0'
     compile 'com.google.firebase:firebase-messaging:9.2.0'
     compile 'com.hbb20:ccp:2.0.2'
+//    compile 'com.github.faranjit:currency-edittext:1.0.1'
+//    compile 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
+    compile 'com.aldoapps:autoformatedittext:0.9.3'
+
     testCompile 'junit:junit:4.12'
 }
 
