--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon_300x300"
+        android:icon="@mipmap/icon_300x300"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SplashScreen">
             <intent-filter>
@@ -249,6 +250,19 @@
         <activity
             android:name=".TermsPolicyActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DriverAssignActivity"
+            android:configChanges="orientation"
+            android:label="Pilih Pengemudi"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+
+        <activity
+            android:name=".TestimonyAddActivity"
+            android:configChanges="orientation"
+            android:label="Berikan Testimoni Anda"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
     </application>
 
 </manifest>
