--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="id.rentist.mitrarentist">
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyASlk5weV-2lDF4-KZbj9p69AQ_i7zKk4Q"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -12,6 +15,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -20,9 +24,15 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyASlk5weV-2lDF4-KZbj9p69AQ_i7zKk4Q" />
+            android:value="AIzaSyDVcxOCRKB1G7FbpVopMTjrXnRtZrswjbI"/>
+
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -199,7 +209,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".FormMedicAsetActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+
+        </activity>
         <activity
             android:name=".FormPhotographyAsetActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -267,6 +280,8 @@
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
         <activity android:name=".MemberProfileActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
+
     </application>
 
 </manifest>
