--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,9 @@ android {
         applicationId "id.rentist.mitrarentist"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 6
+        versionCode 9
         versionName "1.0"
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -21,6 +22,17 @@ android {
         javaMaxHeapSize "4g"
     }
     productFlavors {
+    }
+    packagingOptions {
+        exclude 'META-INF/NOTICE' // will not include NOTICE file
+        exclude 'META-INF/LICENSE' // will not include LICENSE file
+        // as noted by @Vishnuvathsan you may also need to include
+        // variations on the file name. It depends on your dependencies.
+        // Some other common variations on notice and license file names
+        exclude 'META-INF/notice'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license'
+        exclude 'META-INF/license.txt'
     }
 }
 
@@ -41,7 +53,6 @@ dependencies {
     compile 'com.iarcuschin:simpleratingbar:0.1.5'
     compile 'com.mcxiaoke.volley:library-aar:1.0.1'
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.google.firebase:firebase-messaging:11.0.4'
@@ -49,15 +60,20 @@ dependencies {
     compile 'com.hbb20:ccp:2.0.2'
     compile 'com.aldoapps:autoformatedittext:0.9.3'
     compile 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.android.support:multidex:1.0.1'
+//    compile 'com.google.android.gms:play-services:11.0.4'
+    compile 'com.google.android.gms:play-services-places:11.0.4'
+    compile 'com.synnapps:carouselview:0.1.4'
+
     testCompile 'junit:junit:4.12'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
 
 //    for depedencies
 //    compile 'com.github.faranjit:currency-edittext:1.0.1'
 //    compile 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
-
 
 
 
