--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 //    compile 'com.google.android.gms:play-services:11.0.4'
     compile 'com.google.android.gms:play-services-places:11.0.4'
     compile 'com.synnapps:carouselview:0.1.4'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
 
     testCompile 'junit:junit:4.12'
 }
