pussh lagi sama gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId "id.rentist.mitrarentist"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 17
+        versionCode 25
         versionName "1.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -68,6 +68,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.synnapps:carouselview:0.1.4'
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    compile 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
+    compile 'com.github.jrvansuita:PickImage:+'
+
     testCompile 'junit:junit:4.12'
 }
 
