--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "id.rentist.mitrarentist"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 25
-        versionName "1.0"
+        versionCode 29
+        versionName "1.0.1"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
@@ -70,6 +70,7 @@ dependencies {
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
     compile 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
     compile 'com.github.jrvansuita:PickImage:+'
+    compile 'com.github.chrisbanes:PhotoView:1.2.7'
 
     testCompile 'junit:junit:4.12'
 }
